Bug 309454 - Amarok needs to adapt to changes in output of ffmpeg >= 1.0
Summary: Amarok needs to adapt to changes in output of ffmpeg >= 1.0
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Transcoding (other bugs)
Version First Reported In: 2.6-git
Platform: unspecified Linux
: NOR task
Target Milestone: 2.7
Assignee: Amarok Bugs
URL: http://forum.kde.org/viewtopic.php?t=...
Keywords: release_blocker
: 311228 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-11-02 23:59 UTC by Matěj Laitl
Modified: 2012-12-06 10:06 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.7
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matěj Laitl 2012-11-02 23:59:19 UTC
This is a personal TODO note to myself, for the problem see:

http://forum.kde.org/viewtopic.php?t=108264

Reproducible: Always
Comment 1 Matěj Laitl 2012-11-18 10:13:34 UTC
Git commit 0ded42c46fada773a7aaa878e285537aeaa80320 by Matěj Laitl.
Committed on 18/11/2012 at 11:10.
Pushed by laitl into branch 'master'.

Transcoding*Format: fix format detection with ffmpeg >= 1.0

...and change the parsing to be line-by line, so that the regexps can
be more accurate.
FIXED-IN: 2.7
DIGEST: Amarok can now transcode even with ffmpeg >= 1.0

M  +1    -0    ChangeLog
M  +10   -2    src/core/transcoding/TranscodingController.cpp
M  +3    -2    src/core/transcoding/TranscodingFormat.h
M  +2    -5    src/core/transcoding/formats/TranscodingAacFormat.cpp
M  +2    -5    src/core/transcoding/formats/TranscodingAlacFormat.cpp
M  +2    -5    src/core/transcoding/formats/TranscodingFlacFormat.cpp
M  +2    -5    src/core/transcoding/formats/TranscodingMp3Format.cpp
M  +2    -5    src/core/transcoding/formats/TranscodingVorbisFormat.cpp
M  +2    -5    src/core/transcoding/formats/TranscodingWmaFormat.cpp

http://commits.kde.org/amarok/0ded42c46fada773a7aaa878e285537aeaa80320
Comment 2 Matěj Laitl 2012-12-06 10:06:26 UTC
*** Bug 311228 has been marked as a duplicate of this bug. ***