Transcoding*Format: fix format detection with ffmpeg >= 1.0

...and change the parsing to be line-by line, so that the regexps can
be more accurate.

BUG: 309454
FIXED-IN: 2.7
DIGEST: Amarok can now transcode even with ffmpeg >= 1.0