src/core/transcoding/formats/TranscodingFlacFormat.cpp
@@ -20,8 +20,7 @@
 
 #include <QVariant>
 
-namespace Transcoding
-{
+using namespace Transcoding;
 
 FlacFormat::FlacFormat()
 {
@@ -90,7 +89,5 @@ FlacFormat::ffmpegParameters( const Configuration &configuration ) const
 bool
 FlacFormat::verifyAvailability( const QString &ffmpegOutput ) const
 {
-    return ffmpegOutput.contains( QRegExp( ".EA... flac" ) );
-}
-
+    return ffmpegOutput.contains( QRegExp( "^ .EA....*flac" ) );
 }
